Finish static pages

--- a/app/views/static_pages/FAQ.html.erb
+++ b/app/views/static_pages/FAQ.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#FAQ</h1>
-<p>Find me in app/views/static_pages/FAQ.html.erb</p>
+<% provide(:title, 'FAQ') %>
+<!DOCTYPE html>
+<h1>Fix Bad Art</h1>
+    <p>
+      FAQ, Frequently Asked Questions?
+    </p>
+ 
