--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, 'Quality Vectorization - FAST') %>
+<!DOCTYPE html>
+    <h1>Fix Bad Art</h1>
+    <p>
+      Quality Vectorization - FAST!
+    </p>
