--- a/app/views/static_pages/samples.html.erb
+++ b/app/views/static_pages/samples.html.erb
@@ -1,2 +1,8 @@
-<h1>StaticPages#samples</h1>
-<p>Find me in app/views/static_pages/samples.html.erb</p>
+<% provide(:title, 'Samples') %>
+<!DOCTYPE html>
+  <body>
+    <h1>Fix Bad Art</h1>
+    <p>
+       Samples
+    </p>
+ 
