--- a/app/views/static_pages/testimonials.html.erb
+++ b/app/views/static_pages/testimonials.html.erb
@@ -1,2 +1,6 @@
-<h1>StaticPages#testimonials</h1>
-<p>Find me in app/views/static_pages/testimonials.html.erb</p>
+<% provide(:title, 'Testimonials') %>
+<!DOCTYPE html>
+    <h1>Fix Bad Art</h1>
+    <p>
+      Testimonials 
+    </p>
