Finish layout and routes

--- a/app/views/static_pages/FAQ.html.erb
+++ b/app/views/static_pages/FAQ.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'FAQ') %>
 <!DOCTYPE html>
-<h1>Fix Bad Art</h1>
+<h1>FAQ</h1>
     <p>
-      FAQ, Frequently Asked Questions?
+      Frequently Asked Questions
     </p>
  
