--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,12 @@
-<% provide(:title, 'Quality Vectorization - FAST') %>
-<!DOCTYPE html>
-    <h1>Fix Bad Art</h1>
-    <p>
-      Quality Vectorization - FAST!
-    </p>
+<% provide(:title, 'Quality Vectorization FAST') %>
+<div class="center hero-unit">
+  <h1>Thank you for choosing Fix Bad Art! </h1>
+
+  <h2>
+    We vectorize images simply, cheaply, and quickly.
+  </h2>
+
+  <%= link_to "Get a quote!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("logo.jpg", alt: "FixBadArt.com"), 'http://fixbadart.com/' %>
