--- a/app/views/static_pages/samples.html.erb
+++ b/app/views/static_pages/samples.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Samples') %>
 <!DOCTYPE html>
   <body>
-    <h1>Fix Bad Art</h1>
+    <h1>Samples</h1>
     <p>
        Samples
     </p>
