--- a/app/views/static_pages/testimonials.html.erb
+++ b/app/views/static_pages/testimonials.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Testimonials') %>
 <!DOCTYPE html>
-    <h1>Fix Bad Art</h1>
+    <h1>Testimonials</h1>
     <p>
       Testimonials 
     </p>
